# teste

./: .gitignore  README.md  pyproject.toml
